objects/EntityFieldHistoryArchive__c.object
<CustomObject>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewValue__c</fullName>
        <label>NewValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectId__c</fullName>
        <label>ObjectId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldValue__c</fullName>
        <label>OldValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EntityFieldHistoryArchive</label>
    <nameField>
        <displayFormat>EFHA-{000000000}</displayFormat>
        <label>EntityFieldHistoryArchive No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EntityFieldHistoryArchive</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>